--- a/components/generic/card_outline_item/card_outline_item_variant1.module.scss
+++ b/components/generic/card_outline_item/card_outline_item_variant1.module.scss
@@ -3,18 +3,7 @@
 .root {
   position: relative;
   color: theme('colors.darkBlue');
-  
-  @screen md {
-    width: 50%;
-  }
-
-  @screen lg {
-    max-width: 45.6rem;
-  }
-
-  @screen xl {
-    max-width: 51.4rem;
-  }
+  width: 100%;
 }
 
 .wrapper {
@@ -25,22 +14,12 @@
 .category {
   border-bottom: 0.15rem solid theme('colors.darkBlue');
   padding: 1.2rem 2.4rem;
-
-  @screen lg {
-    padding: 1.8rem 4rem;
-  }
 }
 
 .topSection {
   img {
     height: 13.5rem;
     width: 100%;
-  }
-
-  @screen lg {
-    img {
-      height: 25.8rem;
-    }
   }
 }
 
@@ -50,18 +29,10 @@
   > *:last-child {
     margin-bottom: 0;
   }
-
-  @screen lg {
-    padding: 4rem 4.8rem;
-  }
 }
 
 .icon {
   margin-bottom: 1.6rem;
-
-  @screen lg {
-    margin-bottom: 2.4rem;
-  }
 }
 
 .topTags {
@@ -69,11 +40,6 @@
   flex-wrap: wrap;
   column-gap: 2.6rem;
   margin-bottom: 1.325rem;
-  
-  @screen lg {
-    column-gap: 3.2rem;
-    margin-bottom: 1.6rem;
-  }
 }
 
 .headline {
@@ -81,13 +47,6 @@
   font-size: 24px;
   line-height: 110%;
   margin-bottom: 1.6rem;
-
-  @screen lg {
-    max-width: unset;
-    font-size: 4rem;
-    line-height: 100%;
-    margin-bottom: 2.4rem;
-  }
 }
 
 .description {
@@ -95,21 +54,6 @@
   line-height: 140%;
   letter-spacing: normal;
   margin-bottom: 1.959rem;
-  
-  @screen md {
-    margin-bottom: 1.6rem;
-  }
-
-  @screen lg {
-    font-size: 1.6rem;
-    line-height: 2.4rem;
-    margin-bottom: 2.4rem;
-  }
-
-  @screen xl {
-    line-height: 130%;
-    letter-spacing: 0.01em;
-  }
 }
 
 .wrapperButton {
@@ -117,14 +61,6 @@
 
   > div > div:first-child {
     margin-right: 0;
-  }
-
-  @screen md {
-    margin-bottom: 1.6rem;
-  }
-
-  @screen lg {
-    margin-bottom: 2.4rem;
   }
 }
 
