--- a/components/generic/card_outline_item/card_outline_item_variant3.module.scss
+++ b/components/generic/card_outline_item/card_outline_item_variant3.module.scss
@@ -4,6 +4,10 @@
   position: relative;
   color: theme('colors.darkBlue');
 
+  @screen md {
+    max-width: 33.6rem;
+  }
+
   @screen lg {
     max-width: 45.6rem;
   }
@@ -22,7 +26,7 @@
   padding: 1.8rem 4rem;
   border-bottom: 0.15rem solid theme('colors.darkBlue');
 
-  @screen lg {
+  @screen md {
     padding: 1.2rem 2.4rem;
   }
 
@@ -31,12 +35,27 @@
   }
 }
 
+.topSection {
+  @screen md {
+    img {
+      height: 13.6rem;
+      width: 100%;
+    }
+  }
+
+  @screen xl {
+    img {
+      height: 19rem;
+    }
+  }
+}
+
 .bottomSection {
   > *:last-child {
     margin-bottom: 0;
   }
 
-  @screen lg {
+  @screen md {
     padding: 1.959rem;
   }
   
@@ -55,7 +74,7 @@
   flex-wrap: wrap;
   column-gap: 3.2rem;
 
-  @screen lg {
+  @screen md {
     column-gap: 2.6rem;
   }
 
@@ -66,10 +85,22 @@
 
 .headline {
   margin-bottom: 1.6rem;
+
+  @screen md {
+    max-width: 25rem;
+    font-size: 2.4rem;
+    line-height: 110%;
+  }
+
+  @screen lg {
+    max-width: unset;
+    font-size: 2.4rem;
+    line-height: 110%;
+  }
 }
 
 .description {
-  @screen lg {
+  @screen md {
     font-size: 1.4rem;
     line-height: 140%;
     letter-spacing: normal;
@@ -79,19 +110,16 @@
   @screen xl {
     font-size: 1.6rem;
     line-height: 130%;
-    letter-spacing: 0.01em;
     margin-bottom: 2.4rem;
   }
 }
 
 .wrapperButton {
-  margin-bottom: 2.4rem;
-
   > div > div:first-child {
     margin-right: 0;
   }
 
-  @screen lg {
+  @screen md {
     margin-bottom: 1.6rem;
   }
 
