--- a/components/generic/card_outline_item/card_outline_item_variant4.module.scss
+++ b/components/generic/card_outline_item/card_outline_item_variant4.module.scss
@@ -4,6 +4,10 @@
   position: relative;
   color: theme('colors.darkBlue');
 
+  @screen md {
+    max-width: 33.7rem;
+  }
+
   @screen lg {
     max-width: 45.6rem;
   }
@@ -21,6 +25,10 @@
 .category {
   border-bottom: 0.15rem solid theme('colors.darkBlue');
 
+  @screen md {
+    padding: 1.2rem 2.4rem;
+  }
+
   @screen lg {
     padding: 1.8rem 4rem;
   }
@@ -30,9 +38,34 @@
   }
 }
 
+.topSection {
+  @screen md {
+    img {
+      height: 13.6rem;
+      width: 100%;
+    }
+  }
+
+  @screen lg {
+    img {
+      height: 25.4rem;
+    }
+  }
+
+  @screen xl {
+    img {
+      height: 13.6rem;
+    }
+  }
+}
+
 .bottomSection {
   > *:last-child {
     margin-bottom: 0;
+  }
+
+  @screen md {
+    padding: 1.959rem;
   }
 
   @screen lg {
@@ -45,6 +78,10 @@
 }
 
 .icon {
+  @screen md {
+    margin-bottom: 1.6rem;
+  }
+
   @screen lg {
     margin-bottom: 2.4rem;
   }
@@ -59,6 +96,10 @@
   display: flex;
   flex-wrap: wrap;
 
+  @screen md {
+    column-gap: 2.6rem;
+  }
+
   @screen lg {
     column-gap: 3.2rem;
   }
@@ -69,7 +110,15 @@
 }
 
 .headline {
+  @screen md {
+    max-width: 25rem;
+    font-size: 2.4rem;
+    line-height: 110%;
+    margin-bottom: 1.6rem;
+  }
+
   @screen lg {
+    max-width: unset;
     font-size: 4rem;
     line-height: 100%;
     margin-bottom: 2.4rem;
@@ -83,10 +132,16 @@
 }
 
 .description {
+  @screen md {
+    font-size: 1.4rem;
+    line-height: 140%;
+    letter-spacing: normal;
+    margin-bottom: 1.6rem;
+  }
+
   @screen lg {
     font-size: 1.6rem;
     line-height: 2.4rem;
-    letter-spacing: normal;
     margin-bottom: 2.4rem;
   }
 
@@ -100,6 +155,10 @@
 .wrapperButton {
   > div > div:first-child {
     margin-right: 0;
+  }
+
+  @screen md {
+    margin-bottom: 1.6rem;
   }
 
   @screen lg {
